apps/neko-master/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: neko-master
  namespace: homelab
  annotations:
    glance/name: "Neko Master"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: neko-master
  template:
    metadata:
      labels:
        app: neko-master
    spec:
      nodeSelector:
        kubernetes.io/hostname: "realtong-server"
      containers:
        - name: neko-master
          image: ghcr.io/foru17/neko-master:1.3.8
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              name: web
            - containerPort: 3001
              name: api
            - containerPort: 3002
              name: ws
          readinessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 3001
            initialDelaySeconds: 45
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1500m
              memory: 1Gi
          volumeMounts:
            - name: neko-master-data
              mountPath: /app/data
      volumes:
        - name: neko-master-data
          persistentVolumeClaim:
            claimName: neko-master-data-pvc
