apps/neko-master/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: neko-master-ingress
  namespace: homelab
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    cert-manager.io/cluster-issuer: mkcert-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - clash.wst.sh
      secretName: clash-wst-sh-tls
  rules:
    - host: clash.wst.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: neko-master
                port:
                  number: 3000
